--- a/styles/flashcards.scss
+++ b/styles/flashcards.scss
@@ -12,18 +12,23 @@
   height: 150px;
   perspective: 1000px;
   cursor: pointer;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  overflow: hidden;
   position: relative; /* Til að auðvelda staðsetningu barnaelementa */
+  overflow: hidden;
+  border: 1px solid transparent;
+  border-radius: 8px;
+
 }
   
 .flashcard-inner {
+  background-color: #ff6347;
   width: 100%;
   height: 100%;
+  
+
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.6s;
+
 }
   
 .flashcard-inner.flipped {
@@ -33,7 +38,7 @@
 /* Forsíða kortsins */
 .front {
   background-color: #007bff;
-  color: white;
+  color: rgb(255 255 255);
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -44,7 +49,18 @@
 /* Bakhlið kortsins */
 .back {
   background-color: #ff6347;
-  color: white;
+  color: rgb(255 255 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backface-visibility: hidden;
+  transform: rotateY(180deg);
+}
+
+/* Bakhlið kortsins */
+.backFront {
+  background-color: #007bff;
+  color: rgb(255 255 255);
   display: flex;
   justify-content: center;
   align-items: center;
