Örlítðið update á byrtingu efnis í viðbót við hitt. Nú skal ég segjast vera hættur að laga efnið sem 'var komið'

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -23,3 +23,13 @@ footer {
   //Pointless
   color: inherit;
 }
+
+.navigation{
+  width: 100%;
+
+}
+
+.navigation__list{
+  display: flex;
+  flex-direction: row;
+}
