--- a/styles/general.scss
+++ b/styles/general.scss
@@ -15,6 +15,7 @@ html {
 }
 
 button {
+  width: 320px;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.5rem 3rem;
@@ -43,11 +44,30 @@ img {
 }
 
 form {
+  justify-content: center;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   height: auto;
 }
 
 a {
   color: inherit;
+}
+
+
+nav{
+  width: 100%;
+
+}
+
+ul {
+  justify-content: space-around;
+  list-style: none;
+}
+
+
+h1, h2{
+  font-size: 1.5rem;
+  max-width: var(--width-offset);
+  justify-self: center;
 }
