--- a/styles/flashcards.scss
+++ b/styles/flashcards.scss
@@ -23,8 +23,6 @@
   background-color: #ff6347;
   width: 100%;
   height: 100%;
-  
-
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.6s;
@@ -58,7 +56,7 @@
 }
 
 /* Bakhlið kortsins */
-.backFront {
+.back-front {
   background-color: #007bff;
   color: rgb(255 255 255);
   display: flex;
