--- a/styles/general.scss
+++ b/styles/general.scss
@@ -55,7 +55,7 @@ a {
 }
 
 
-nav{
+nav {
   width: 100%;
 
 }
@@ -67,7 +67,8 @@ ul {
 }
 
 
-h1, h2{
+h1,
+h2 {
   font-size: 1.5rem;
   max-width: var(--width-offset);
   justify-self: center;
